Trigger gmcp core supports set on the password

--- a/lib/web/templates/page/mudlet-package.xml.eex
+++ b/lib/web/templates/page/mudlet-package.xml.eex
@@ -16,7 +16,7 @@
             <colorTriggerFgColor>#000000</colorTriggerFgColor>
             <colorTriggerBgColor>#000000</colorTriggerBgColor>
             <regexCodeList>
-                <string>ExVenture</string>
+              <string>Your one time password</string>
             </regexCodeList>
             <regexCodePropertyList>
                 <integer>0</integer>
