NPCs can perform multiple actions
Only for `room/heard` for now

--- a/lib/web/templates/admin/npc/show.html.eex
+++ b/lib/web/templates/admin/npc/show.html.eex
@@ -129,7 +129,9 @@
                     <% end) %>
                   </td>
                   <td>
-                    <%= render(EventView, "_action.html", action: event.action) %>
+                    <%= if Map.has_key?(event, :action) do %>
+                      <%= render(EventView, "_action.html", action: event.action) %>
+                    <% end %>
                   </td>
                 </tr>
               <% end) %>
