--- a/lib/web/templates/chat/show.html.eex
+++ b/lib/web/templates/chat/show.html.eex
@@ -22,11 +22,11 @@
 </div>
 
 <div class="row mt-3">
-  <div class="col-md-11">
-    <input id="chat-prompt" name="prompt" type="text" class="form-control" />
+  <div class="col-md-11 col-9">
+    <input id="chat-prompt" name="prompt" type="text" class="form-control" autofocus="autofocus" />
   </div>
 
-  <div class="col-md-1">
-    <button class="btn btn-primary">Send</button>
+  <div class="col-md-1 col-2">
+    <button id="chat-send" class="btn btn-primary">Send</button>
   </div>
 </div>
