--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/home.css") %>">
     <link rel="stylesheet" href="<%= color_css_path(@conn) %>">
     <link rel="alternate" type="application/rss+xml" title="<%= Config.game_name %> » Announcements" href="<%= public_announcement_url(@conn, :feed) %>">
+
+    <script type="application/javascript">
+<%= if Map.has_key?(assigns, :user) do %>
+window.gameConfig = <%= raw(Poison.encode!(game_config(@user))) %>
+<% end %>
+    </script>
   </head>
 
   <body id="body" data-user-token="<%= @conn |> user_token() %>">
