Display random character starting names when creating an account
- Lower the barrier to starting
- Claims the name once created to prevent a duplicate error

--- a/assets/home/css/base.scss
+++ b/assets/home/css/base.scss
@@ -99,3 +99,13 @@ footer {
     padding: .575rem .75rem;
   }
 }
+
+.starter-name {
+  text-decoration: underline;
+  cursor: pointer;
+  color: $blue;
+
+  &:hover {
+    color: $blue * 1.3;
+  }
+}
