--- a/lib/web/templates/admin/config/index.html.eex
+++ b/lib/web/templates/admin/config/index.html.eex
@@ -58,6 +58,19 @@
                 <td><pre><%= Config.starting_save() |> Poison.encode!(pretty: true) %></pre></td>
                 <td></td>
               </tr>
+              <tr>
+                <th>Random Character Names</th>
+                <td>
+                  <ul>
+                    <%= Enum.map(Config.character_names(), fn name -> %>
+                      <li><%= name %></li>
+                    <% end) %>
+                  </ul>
+                  </td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "character_names"), class: "btn btn-default btn-xs") %>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
