Record channel messages and replay for connecting web clients
Let admins check in on what's been said

--- a/lib/web/templates/admin/channel/index.html.eex
+++ b/lib/web/templates/admin/channel/index.html.eex
@@ -39,6 +39,7 @@
                   <td><%= channel.name %></td>
                   <td><code><%= channel.color %></code></td>
                   <td>
+                    <%= link("View Log", to: channel_path(@conn, :show, channel.id), class: "btn btn-default btn-xs") %>
                     <%= link("Edit", to: channel_path(@conn, :edit, channel.id), class: "btn btn-default btn-xs") %>
                   </td>
                 </tr>
