Update the who listing
- Display admins first and specially flagged
- Space out regular users and make them more uniform

--- a/lib/web/templates/admin/race/_form.html.eex
+++ b/lib/web/templates/admin/race/_form.html.eex
@@ -5,8 +5,12 @@
 
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <%= FormView.text_field(f, :name) %>
+      <%= FormView.text_field(f, :name) do %>
+        <span class="help-block"><%= Help.get("race.name") %></span>
+      <% end %>
+
       <%= FormView.textarea_field(f, :description) %>
+
       <%= FormView.textarea_field(f, :starting_stats, value: @changeset |> starting_stats(), rows: 13) %>
     </div>
 
