--- a/lib/web/templates/admin/class/_form.html.eex
+++ b/lib/web/templates/admin/class/_form.html.eex
@@ -5,7 +5,10 @@
 
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <%= FormView.text_field(f, :name) %>
+      <%= FormView.text_field(f, :name) do %>
+        <span class="help-block"><%= Help.get("class.name") %></span>
+      <% end %>
+
       <%= FormView.textarea_field(f, :description, [rows: 10]) %>
     </div>
 
