Allow admins to cheat and give experience to users

--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -14,6 +14,7 @@
             <%= if online?(@user) do %>
               <%= link("Watch", to: user_watch_path(@conn, :watch, @user.id), class: "btn btn-warning") %>
             <% else %>
+              <%= link("Cheat", to: user_cheat_path(@conn, :cheat, @user.id), class: "btn btn-warning") %>
               <%= link("Edit", to: user_path(@conn, :edit, @user.id), class: "btn btn-primary") %>
             <% end %>
             <%= link("Reset Save", to: user_reset_path(@conn, :reset, @user.id), method: :post, data: [confirm: "Are you sure?"], class: "btn btn-warning") %>
@@ -121,7 +122,7 @@
   <% end %>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Items</h3>
@@ -144,10 +145,8 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Quests</h3>
