--- a/lib/web/templates/admin/config/index.html.eex
+++ b/lib/web/templates/admin/config/index.html.eex
@@ -54,6 +54,13 @@
                 <td></td>
               </tr>
               <tr>
+                <th>Basic Stats</th>
+                <td><pre><%= Config.basic_stats() |> Poison.encode!(pretty: true) %></pre></td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "basic_stats"), class: "btn btn-default btn-xs") %>
+                </td>
+              </tr>
+              <tr>
                 <th>Starting Save</th>
                 <td><pre><%= Config.starting_save() |> Poison.encode!(pretty: true) %></pre></td>
                 <td></td>
