--- a/lib/web/templates/layout/play.html.eex
+++ b/lib/web/templates/layout/play.html.eex
@@ -14,6 +14,7 @@
 
   <body id="body" data-user-token="<%= @conn |> user_token() %>">
     <%= render @view_module, @view_template, assigns %>
+    <script src="<%= static_path(@conn, "/js/vendor.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/play.js") %>"></script>
   </body>
 </html>
