--- a/lib/web/templates/admin/npc/show.html.eex
+++ b/lib/web/templates/admin/npc/show.html.eex
@@ -77,6 +77,12 @@
                 <%= link("View Details", to: npc_event_path(@conn, :index, @npc.id), class: "btn btn-primary") %>
               </td>
             </tr>
+            <tr>
+              <th>Script</th>
+              <td>
+                <%= link("View Details", to: npc_script_path(@conn, :show, @npc.id), class: "btn btn-primary") %>
+              </td>
+            </tr>
           </table>
         </div>
       </div>
@@ -108,21 +114,6 @@
       </div>
     </div>
   </div>
-
-  <%= if @npc.script do %>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="box">
-          <div class="box-header">
-            <h3 class="box-title">Script</h3>
-          </div>
-          <div class="box-body">
-            <pre><%= @npc.script |> Poison.encode!(pretty: true) %></pre>
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
 
   <div class="row">
     <div class="col-md-12">
