--- a/lib/web/templates/admin/shared/_effects.html.eex
+++ b/lib/web/templates/admin/shared/_effects.html.eex
@@ -5,7 +5,8 @@ $(function() {
     "damage/type": <%= Effect.starting_effect("damage/type") |> encode_json() %>,
     "damage/over-time": <%= Effect.starting_effect("damage/over-time") |> encode_json() %>,
     "recover": <%= Effect.starting_effect("recover") |> encode_json() %>,
-    "stats": <%= Effect.starting_effect("stats") |> encode_json() %>
+    "stats": <%= Effect.starting_effect("stats") |> encode_json() %>,
+    "stats/boost": <%= Effect.starting_effect("stats/boost") |> encode_json() %>
   };
 
   if ($("#<%= @id %>").val() == "") {
@@ -29,6 +30,7 @@ $(function() {
   <%= link("Add 'damage/over-time'", to: "#", class: "btn btn-default add-effect", data: [type: "damage/over-time"]) %>
   <%= link("Add 'recover'", to: "#", class: "btn btn-default add-effect", data: [type: "recover"]) %>
   <%= link("Add 'stats'", to: "#", class: "btn btn-default add-effect", data: [type: "stats"]) %>
+  <%= link("Add 'stats/boost'", to: "#", class: "btn btn-default add-effect", data: [type: "stats/boost"]) %>
 </span>
 <span class="help-block">
   <%= link("View effect documentation", to: "https://exventure.org/admin/effects/", target: "_blank", class: "btn btn-default") %>
