Add require_target to skills
This allows spells such as `cure wounds` to target yourself in a fight
_without_ sending to your target or requiring `cure wounds playername`.

--- a/lib/web/templates/admin/skill/show.html.eex
+++ b/lib/web/templates/admin/skill/show.html.eex
@@ -75,6 +75,10 @@
                 <td><span class="label label-default"><%= @skill.is_global %></span></td>
               </tr>
               <tr>
+                <th>Require target?</th>
+                <td><span class="label label-default"><%= @skill.require_target %></span></td>
+              </tr>
+              <tr>
                 <th>
                   White Listed Effect Types
                   <%= SharedView.help_tooltip("skill.whitelist_effects") %>
