--- a/lib/web/templates/admin/skill/_form.html.eex
+++ b/lib/web/templates/admin/skill/_form.html.eex
@@ -24,6 +24,16 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <div class="col-md-8 col-md-offset-4">
+          <%= label f, :require_target do %>
+            <%= checkbox f, :require_target %> Require a target?
+          <% end %>
+          <%= error_tag f, :is_global %>
+          <span class="help-block"><%= Help.get("skill.require_target") %></span>
+        </div>
+      </div>
+
       <h4>Usage</h4>
       <hr />
 
