Update the mudlet package for the new login procedure

--- a/lib/web/templates/page/mudlet-package.xml.eex
+++ b/lib/web/templates/page/mudlet-package.xml.eex
@@ -36,7 +36,7 @@
           <colorTriggerFgColor>#000000</colorTriggerFgColor>
           <colorTriggerBgColor>#000000</colorTriggerBgColor>
           <regexCodeList>
-            <string>Please sign in via the website and get a one time password.</string>
+            <string>Please sign in via the website to authorize this connection.</string>
             <string>1</string>
             <string>^http.+</string>
           </regexCodeList>
