--- a/lib/web/templates/admin/color/index.html.eex
+++ b/lib/web/templates/admin/color/index.html.eex
@@ -56,13 +56,34 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Web Client</h3>
+          <h3 class="box-title">Web Site & Client</h3>
           <div class="box-tools">
             <%= link("Reset", to: color_path(@conn, :delete), method: :delete, class: "btn btn-warning") %>
           </div>
         </div>
         <%= form_tag color_path(@conn, :update), method: "post", class: "form-horizontal" do %>
           <div class="box-body">
+            <h4>Home Page</h4>
+            <span class="help-block">These change the colors on the home page</span>
+
+            <%= color_field(:home_header, "Home Header") %>
+
+            <%= color_field(:home_link, "Home Link") %>
+
+            <%= color_field(:home_link_hover, "Home Link Hover") %>
+
+            <%= color_field(:home_primary, "Home Primary Buttons") %>
+
+            <%= color_field(:home_primary_hover, "Home Primary Buttons Hover") %>
+
+            <%= color_field(:home_primary_text, "Home Primary Buttons Text") %>
+
+            <%= color_field(:home_secondary, "Home Secondary Buttons") %>
+
+            <%= color_field(:home_secondary_hover, "Home Secondary Buttons Hover") %>
+
+            <%= color_field(:home_secondary_text, "Home Secondary Buttons Text") %>
+
             <h4>Text Colors</h4>
             <span class="help-block">These change the font color of text in the web client</span>
 
