--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -9,7 +9,7 @@
 
     <title><%= page_title(@conn, assigns) %></title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/home.css") %>">
-    <link rel="stylesheet" href="<%= color_css_path(@conn) %>">
+    <link rel="stylesheet" href="<%= color_css_path(@conn, home: true) %>">
     <link rel="alternate" type="application/rss+xml" title="<%= Config.game_name %> » Announcements" href="<%= public_announcement_url(@conn, :feed) %>">
 
     <script type="application/javascript">
