--- a/lib/web/templates/page/map.xml.eex
+++ b/lib/web/templates/page/map.xml.eex
@@ -2,13 +2,13 @@
 <map>
   <areas>
     <%= Enum.map(@zones, fn zone -> %>
-    <area id="<%= zone.id %>" name="<%= zone.name %>" />
+    <area id="<%= zone.id %>" name="<%= xml_escape(zone.name) %>" />
     <% end) %>
   </areas>
   <rooms>
 <%= Enum.map(@zones, fn zone -> %>
   <%= Enum.map(Room.for_map(zone), fn room -> %>
-    <room id="<%= room.id %>" area="<%= zone.id %>" title="<%= room.name %>" environment="<%= Room.ecology_id(room) + 1 %>">
+    <room id="<%= room.id %>" area="<%= zone.id %>" title="<%= xml_escape(room.name) %>" environment="<%= Room.ecology_id(room) + 1 %>">
       <coord x="<%= room.x %>" y="<%= room.y * -1 %>" z="<%= room.map_layer %>" />
     <%= Enum.map(Room.room_exits(room), fn {direction, target_id} -> %>
       <exit direction="<%= direction %>" target="<%= target_id %>" />
